Bugfix: some browsers were 1 pixel too large, so set the min-height to 14px instead of 15px

--- a/sites/all/themes/genesis/genesis_mcneese/css/screen.css
+++ b/sites/all/themes/genesis/genesis_mcneese/css/screen.css
@@ -497,7 +497,7 @@ div#breadcrumb {
   font-family: Arial,Helvetica,Sans-Serif,Sans;
   font-size: 12px;
 
-  min-height: 15px;
+  min-height: 14px;
 
   margin: 0 0 0 0;
   padding-top: 3px;
@@ -545,7 +545,7 @@ div#breadcrumb .views-field-field-event-date .field-content {
 
   font-weight: bold;
   letter-spacing: 1px;
-  min-height: 15px;
+  min-height: 14px;
 
   padding-left: 3px;
   padding-right: 3px;
